fix: modal close button aligment on smaller screens

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -42,9 +42,11 @@
 
 .modal-header .btn-close {
   --btn-close-width: 1.25rem;
+  align-self: flex-start;
+  margin-top: calc(0.25em + 1px);
 
   order: 1;
-  margin-right: calc(#{$btn-close-padding-x} * -1);
+  margin-right: calc((#{$btn-close-padding-x} - 1px) * -1);
   color: $navy;
 }
 
